yaml file corrected

--- a/0-Demo-Files/Nginx-Deployment-Argo-Apps/argo-app.yaml
+++ b/0-Demo-Files/Nginx-Deployment-Argo-Apps/argo-app.yaml
@@ -1,18 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-demo
-  namespace: argocd
+  name: secondapp
 spec:
-  project: default
-  source:
-    repoURL: 'https://github.com/SMACAcademy/ArgoCD-Complete-Master-Course.git'
-    path: 0-Demo-Files/Nginx-Deployment
-    targetRevision: HEAD
   destination:
+    name: ''
+    namespace: selfheal
     server: 'https://kubernetes.default.svc'
-    namespace: default
-syncPolicy:
-  automated:
-    prune: true
-    selfHeal: true
+  source:
+    path: 0-Demo-Files/Nginx-Deployment
+    repoURL: 'https://github.com/SMACAcademy/ArgoCD-Complete-Master-Course.git'
+    targetRevision: HEAD
+  sources: []
+  project: default
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
