--- a/0-Demo-Files/Nginx-Deployment-Argo-Apps/argo-app.yaml
+++ b/0-Demo-Files/Nginx-Deployment-Argo-Apps/argo-app.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: selfheal
+    namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
     path: 0-Demo-Files/Nginx-Deployment
