--- a/0-Demo-Files/Nginx-Deployment-Argo-Apps/argo-app.yaml
+++ b/0-Demo-Files/Nginx-Deployment-Argo-Apps/argo-app.yaml
@@ -2,10 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: selfhealtestapp
+  namespace: argocd
 spec:
   destination:
     name: ''
-    namespace: selfhealns
+    namespace: argocdappdemo
     server: 'https://kubernetes.default.svc'
   source:
     path: 0-Demo-Files/Nginx-Deployment
