--- a/0-Demo_Files/Nginx_Deployment_Prune/nginx-deployment-prune.yaml
+++ b/0-Demo_Files/Nginx_Deployment_Prune/nginx-deployment-prune.yaml
@@ -28,7 +28,7 @@ metadata:
   namespace: argocdappdemo
 spec:
   selector:
-    app: example
+    app1: example
   ports:
     - protocol: TCP
       port: 80
