--- a/0-Demo_Files/Ignore_Diff_Apps/argo-app-sync-Ignorediff.yaml
+++ b/0-Demo_Files/Ignore_Diff_Apps/argo-app-sync-Ignorediff.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: argocdappdemo  
+    namespace: argocdappdemo-ignorediff  
     server: 'https://kubernetes.default.svc'
   source:
     path: 0-Demo_Files/Ignore_Diff
