--- a/0-Demo_Files/Ignore_Diff/sync-options-Ignorediff.yaml
+++ b/0-Demo_Files/Ignore_Diff/sync-options-Ignorediff.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: example-deployment
-  namespace: argocdappdemo
+  namespace: argocdappdemo-ignorediff
 spec:
   replicas: 4
   selector:
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: example-service
-  namespace: argocdappdemo
+  namespace: argocdappdemo-ignorediff
 spec:
   selector:
     app: example
@@ -41,6 +41,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: demo-configmap
+  namespace: argocdappdemo-ignorediff
 data:
   key1: "value1"
   key2: "value2"
