--- a/0-Demo_Files/Sync_Retry/sync-options-retry.yaml
+++ b/0-Demo_Files/Sync_Retry/sync-options-retry.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: example-deployment
-  namespace: argocdappdemo-v
+  namespace: argocdappdemo-retry
 spec:
   replicas: 2
   selector:
