--- a/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
+++ b/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
@@ -48,5 +48,5 @@ spec:
         - containerPort: 80
   # Intentional Schema Validation Issue
   # The 'replicas' field is not valid for a Pod specification.
-  #replicas: 3
+  replicas: 3
 
