--- a/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
+++ b/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
@@ -40,6 +40,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: demo-pod
+  annotations:
+    argocd.argoproj.io/sync-options: Validate=false
 spec:
   containers:
     - name: nginx-container
