--- a/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
+++ b/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
@@ -50,5 +50,5 @@ spec:
         - containerPort: 80
   # Intentional Schema Validation Issue
   # The 'replicas' field is not valid for a Pod specification.
-  replicas: 3
+  invalidField: invalidValue  # This field is intentionally invalid
 
