--- a/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
+++ b/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
@@ -5,6 +5,7 @@ metadata:
   #annotations:
     #argocd.argoproj.io/sync-options: Validate=false
 spec:
+  invalidField: invalidValue  # This field is intentionally invalid
   containers:
     - name: nginx-container
       image: nginx:latest
