--- a/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
+++ b/0-Demo_Files/With_Schema_Error/sync-options-demo.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: demo-pod
-  #annotations:
-    #argocd.argoproj.io/sync-options: Validate=false
+  annotations:
+    argocd.argoproj.io/sync-options: Validate=true
 spec:
   invalidField: invalidValue  # This field is intentionally invalid
   containers:
