--- a/0-Demo_Files/Liveness_Deployment/liveness-deployment.yaml
+++ b/0-Demo_Files/Liveness_Deployment/liveness-deployment.yaml
@@ -15,9 +15,14 @@ spec:
       containers:
       - name: liveness
         image: registry.k8s.io/liveness
+        args:
+        - /server
         livenessProbe:
           httpGet:
-            path: /health
+            path: /healthz
             port: 8080
+            httpHeaders:
+            - name: Custom-Header
+              value: Awesome
           initialDelaySeconds: 3
           periodSeconds: 3
