--- a/0-Demo_Files/Params_Demo/libs/common.yaml
+++ b/0-Demo_Files/Params_Demo/libs/common.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: demo-configmap
-  namespace: argocdappdemo-params
+  namespace: argocdapp-param-demo
 data:
   key1: "value1"
   key2: "value2"
